force-app/main/default/objects/Progress__c/Progress__c.object-meta.xml
<CustomObject>
    <label>Progress</label>
    <nameField>
        <displayFormat>PRG-{00000000}</displayFormat>
        <label>Progress Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Progress</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>