force-app/main/default/objects/Progress__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Learner for this Lesson progress record.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Progress</relationshipLabel>
    <relationshipName>Progress</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>