force-app/main/default/objects/Progress__c/fields/Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Parent enrollment for this lesson progress record.</inlineHelpText>
    <label>Enrollment</label>
    <referenceTo>Enrollment__c</referenceTo>
    <relationshipLabel>Progress Records</relationshipLabel>
    <relationshipName>Lesson_Progress_Records</relationshipName>
    <type>Lookup</type>
</CustomField>