force-app/main/default/objects/Progress__c/fields/Lesson__c.field-meta.xml
<CustomField>
    <fullName>Lesson__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Lesson</label>
    <referenceTo>Lesson__c</referenceTo>
    <relationshipLabel>Progress</relationshipLabel>
    <relationshipName>Progress</relationshipName>
    <type>Lookup</type>
</CustomField>