force-app/main/default/objects/Progress__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <description>Unique constraint key to prevent duplicate progress records for the same Contact + Lesson + Enrollment combination. Workflow rule sets value to Contact__c + &apos;_&apos; + Lesson__c + &apos;_&apos; + Enrollment__c</description>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>